<resources>
    <string name="app_name">MathildeApp</string>
    <string name="greetingmessage">Joyeux Noël!</string>
    <string name="button_label_toast">Hello Toast!</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toasty Toasta!</string>
    <string name="button_label_restart">Restart</string>
    <string name="button_countapp">Go to countApp</string>
    <string name="welcome">Welkom!</string>
    <string name="bye">Tot ziens!</string>
    <string name="todo_list">Todo list</string>
    <string name="todo_newhint">Enter a new item</string>
    <string name="todo_newitem">Add Item</string>
    <string name="welcome_todolist">Hallo hallo la todo list!</string>
    <string name="button_return">Back to main screen</string>
</resources>
