<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mathildapp.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_text_size"
        android:gravity="center"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center">

        <Button
            android:id="@+id/button_countapp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/myBackgroundColor"
            android:onClick="launchCountApp"
            android:text="@string/button_countapp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_text_size"
            android:gravity="center"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/button_todolist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/myBackgroundColor"
            android:onClick="launchTodoApp"
            android:text="@string/todo_list"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_text_size"
            android:gravity="center"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bye"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_text_size"
        android:gravity="center"
        android:textStyle="bold" />

</LinearLayout>
